--- a/res/css/style.css
+++ b/res/css/style.css
@@ -23,27 +23,48 @@ h1 {
     color: #b9f2ff;
     display: block;
     font-size: 45px;
-margin-top: 50px;
-
+    margin-top: 50px;
+    transition: .5s;
+    animation: textShadow .5s infinite alternate linear;
 }
 
-button, #info {
+@keyframes textShadow {
+    0% {
+        text-shadow: 1px 2px 3px silver;
+        
+    }
+
+    50% {
+        text-shadow: 1px 2px 3px grey;
+       
+    }
+
+    100% {
+        text-shadow: 1px 2px 3px black;
+      
+    }
+}
+
+button,
+#info {
     display: table;
     margin: 0 auto;
     border: none;
     padding: 1em;
-   font-size: large;
-   background-color: rgba(0, 0, 0, 0.787);
-   color: #b9f2ff;
-   transition: .5s;
-   font-size: 20px;
-   cursor: pointer;
+    font-size: large;
+    background-color: rgba(0, 0, 0, 0.787);
+    color: #b9f2ff;
+    transition: .5s;
+    font-size: 20px;
+    cursor: pointer;
 }
-.box{
+
+.box {
     position: relative;
     display: block;
 }
-#box-show{
+
+#box-show {
     padding: 1em;
     color: black;
     background-color: white;
@@ -53,10 +74,12 @@ button, #info {
     font-size: large;
     top: 150px;
 }
-.box:hover #box-show{
+
+.box:hover #box-show {
     display: block;
 }
-#changeBackground{
+
+#changeBackground {
     position: absolute;
     left: 0px;
     bottom: 0px;
@@ -75,61 +98,76 @@ button, #info {
     animation: change 1s infinite alternate linear;
     background-color: rgba(0, 0, 0, 0.787);
 }
- @keyframes change{
-    0%{color: white;}
-    100%{color: #b9f2ff;}
+
+@keyframes change {
+    0% {
+        color: white;
+    }
+
+    100% {
+        color: #b9f2ff;
+    }
 }
-#time{
+
+#time {
     position: absolute;
     right: 0px;
     bottom: 0px;
     display: table;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.787);
-    color: #b9f2ff;;
+    color: #b9f2ff;
+    ;
     font-size: 24px;
     padding: 1em;
 }
-#aboutmusic{
- position: absolute;
- left: 0px;
- top: 0px;
- background-color: rgba(0, 0, 0, 0.787);
- color: #b9f2ff;
- font-size: larger;
- padding: 1em;
+
+#aboutmusic {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    background-color: rgba(0, 0, 0, 0.787);
+    color: #b9f2ff;
+    font-size: larger;
+    padding: 1em;
 }
 
 
 
-#cookie{
+#cookie {
     cursor: pointer;
     width: 250px;
     height: 250px;
-     display: block;
-     margin: 0 auto;
-     padding: 2em;
-     transition: .5s;
+    display: block;
+    margin: 0 auto;
+    padding: 2em;
+    transition: .5s;
 }
-#cookie2, #cookie3, #cookie4 {
+
+#cookie2,
+#cookie3,
+#cookie4 {
     cursor: pointer;
     width: 250px;
     height: 250px;
-     display: none;
-     padding: 2em;
-     margin: 0 auto;
-     transition: .5s;
+    display: none;
+    padding: 2em;
+    margin: 0 auto;
+    transition: .5s;
 }
-#cookie:hover{
-    transform: scale(1.1);
-}
-#cookie2:hover{
-    transform: scale(1.1);
-}
-#cookie3:hover{
-    transform: scale(1.1);
-}
-#cookie4:hover{
+
+#cookie:hover {
     transform: scale(1.1);
 }
 
+#cookie2:hover {
+    transform: scale(1.1);
+}
+
+#cookie3:hover {
+    transform: scale(1.1);
+}
+
+#cookie4:hover {
+    transform: scale(1.1);
+}
