--- a/res/css/style.css
+++ b/res/css/style.css
@@ -43,7 +43,7 @@
 
 
 body {
-    background-image: url(../res/img/background.jpg);
+    background-image: url(../img/background.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
